fix root element font size based on device width, add styles to scrollbar

--- a/frontend/src/styles/Global.scss
+++ b/frontend/src/styles/Global.scss
@@ -75,9 +75,8 @@ $large-desktop-breakpoint: 2000px; // minimum width for a large desktop screen (
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: 80vw;
   max-width: 600px;
-  transition:
-    transform 0.5s ease-in-out,
-    opacity 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out,
+  opacity 0.5s ease-in-out;
 }
 
 .mainText {
@@ -92,13 +91,40 @@ $large-desktop-breakpoint: 2000px; // minimum width for a large desktop screen (
   position: sticky;
 }
 
+* {
+  &::-webkit-scrollbar {
+    width: 10px;
+    margin-right: 5px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: #fff;
+    border-radius: 10px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #D9D9D9;
+    border-radius: 10px;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background: #c5c5c5;
+  }
+}
+
 .modal,
 .sidebarContainer {
   padding-left: $sidebar-width;
 }
 
+@media (max-width: 1400px) {
+  html {
+    font-size: 14px !important;
+  }
+}
+
 @media (max-width: $phone-breakpoint) {
-  body {
+  html {
     font-size: 12px;
   }
 
